BE: Node.js BE Demo 3.0.0
* Dockerfile added
* Fixes and improvements
* Kubernetes deployment yaml added
